# chiselki

./: .gitignore  CMakeLists.txt  README.md  TestExp
Exp/: Consts.hpp  Exp.hpp  TestExp.cpp
atmosphere model/: get_rho.cpp  make_plot.py  ode_solver.cpp
atmosphere_model/: get_rho.cpp  get_rho.hpp  make_plot.py  ode_solver.cpp  rho.cpp  rho.hpp  rho_coefficients.cpp
atmosphere_model/logs/: points_logs.txt
common/: consts.hpp  random_num.hpp
differentiator/: AAD22.cpp  AAD22.hpp  F1.hpp  aad22.cpp  aad22.hpp  differentiator.hpp  enums.hpp  functions.hpp  test_aad22.cpp  test_differentiator.cpp
differentiator/logs/: logs.txt
everhart_method/: determine_satellite_position.cpp  make_plot.py  stepper.cpp  stepper.hpp
everhart_method/logs/: points.txt
exp/: chebyshev_coefficients.cpp  exp.hpp  exp_chebyshev.hpp  exp_pade.hpp  exp_taylor.hpp  fft.hpp  find_count_pade_members.cpp  test_exp.cpp
exp/fft/: chebyshev_polynomials.hpp  exp_fft.hpp  fft_coefficients.cpp  test_exp_fft.cpp
exp/fft/logs/: fft_logs.txt
exp/logs/: double_logs.txt  float_logs.txt  long_double_logs.txt
runtime_pre-calculation/: find_polynomial_hw3.cpp
useful/: chebyshev_coefficients.cpp  chebyshev_polynomials.hpp  consts.hpp  fft_coefficients.cpp  random_num.hpp
